# fp

./: .coveragerc  .markdownlint.json  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
fp/monads/: monad.md  monad.py
tests/: test_monad.py
