[project]
name = "fp"
version = "0.1.0"
description = "Additional Functional Programming Concepts"
authors = [
    {name = "George Cummings",email = "gmc@cummings-online.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "fp", from = "src"}]


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.20"
mkdocstrings = "^0.30.1"

[[tool.pytest.ini_options]]
addopts = [
    "--ignore=environments",
    "--ignore=.venv",
    "--import-mode=importlib"
]
cache_dir = "/tmp/pytest"
pythonpath = [ "fp", "tests" ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
